Main image fixed on mobile

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -67,6 +67,26 @@
     font-family: 'Aileron';
 }
 
+.navbar-toggler{
+  @include bp.media-screen(mobile){
+    padding: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50px !important;
+    padding: 0 !important;
+  }
+
+ &-bar{
+    @include bp.media-screen(mobile){
+      width: 28px !important;
+      height: 3px !important;
+      background-color: #ffffff !important;
+    }
+ }
+}
+
 .section-image {
   background-size: cover;
   background-position: center center;
